--- a/style.css
+++ b/style.css
@@ -1,1 +1,131 @@
-@import url('https://fonts.googleapis.com/css2?family=Righteous&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Righteous&family=Sarala:wght@400;700&display=swap');
+
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    text-decoration: none;   
+}
+
+body {
+    font-size: 100%;
+    background: linear-gradient(68.15deg, #2F2325 16.62%, #8E5D52 85.61%);
+}
+
+.header {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-around;
+    padding: 24px;
+}
+
+.header-img {
+    height: 72px;
+}
+
+.header-menu {
+    display: flex;
+    gap: 32px;
+}
+
+.header-menu-item {
+    font-family: 'Sarala', sans-serif;
+    font-weight: 400;
+    font-size: 18px;
+    color: #FFF2E7;
+}
+
+.header-menu-item:hover {
+    color: rgba(236, 214, 196, 0.53);
+}
+
+.content {
+    border-top: 0.4px solid #FFF2E7;
+    margin-bottom: 48px;
+}
+
+.main-content {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-around;
+}
+
+.main-content-write {
+    display: flex;
+    flex-direction: column;
+    gap: 32px;
+}
+
+.main-content-h1 {
+    font-family: 'Righteous', cursive;
+    font-weight: 400;
+    font-size: 64px;
+    color:#FFF2E7;
+}
+
+.main-content-h2 {
+    font-family: 'Sarala', sans-serif;
+    font-weight: 400;
+    font-size: 24px;
+    color: #ecd6c4;
+}
+
+.main-content-button {
+    border: none;
+    border-radius: 20px;
+    box-shadow: 4px 5px 4px rgba(0, 0, 0, 0.25);
+    width: 180px;
+    height: 60px;
+    background-color: #ecd6c4;
+    color: #2f2325;
+    font-weight: 400;
+    font-size: 24px;
+    font-family: 'Sarala', sans-serif;
+}
+
+.main-content-button:hover {
+    background-color: rgba(236, 214, 196, 0.53);
+}
+
+.main-content-img {
+    height: 430px;
+}
+
+.secondary-content {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 24px;
+    margin-top: 48px;
+}
+
+.secondary-content-h1 {
+    border-top: 0.3px solid #FFF2E7;
+    padding-top: 48px;
+    font-family: 'Righteous', cursive;
+    font-weight: 400;
+    font-size: 24px;
+    color: #FFF2E7;
+    margin-bottom: 16px;
+}
+
+.secondary-content-p {
+    font-family: 'Sarala', sans-serif;
+    font-weight: 300;
+    font-size: 18px;
+    color: #ecd6c4;
+}
+
+.footer {
+    border-top: 0.4px solid #FFF2E7;
+    margin-bottom: 48px;
+    padding: 24px;
+}
+
+.footer-logo-img {
+    height: 48px;
+    display: block;
+    margin: 0 auto;
+}
